--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,146 @@
-*{
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,600,800,900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 62.5%;
+}
+
+// General styles
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+.btn {
+    color: #fff;
+    background: #21d397;
+}
+
+img {
+    width: 100%;
+}
+
+// Header 
+
+header {
+    background: url('../img/wave.png') no-repeat center center / cover;
+
+    .navegation {
+        padding: 20px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+
+        .navbar {
+            width: 80%;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+
+            .nav-logo {
+                flex-basis: 30%;
+
+                a {
+                    color: #fff;
+                    font-size: 25px;
+
+
+                    span {
+                        color: #21d397;
+                    }
+                }
+
+            }
+
+            ul.nav-links {
+                flex-basis: 60%;
+                display: flex;
+                justify-content: flex-end;
+
+                li.nav-item {
+                    a {
+                        text-transform: uppercase;
+                        color: #fff;
+                        font-size: 15px;
+                        margin-right: 35px;
+                    }
+                }
+            }
+
+            a.btn {
+                color: #fff;
+                font-size: 12px;
+                font-weight: 600;
+                text-transform: uppercase;
+                line-height: 33px;
+                padding: 0 20px;
+                min-width: 100px;
+                height: 35px;
+                border-radius: 5px;
+                border: 1px solid #fff;
+                letter-spacing: 1px;
+                transition: all .5s ease;
+
+                &:hover {
+                    background-color: #7450fe;
+                }
+            }
+        }
+    }
+
+    .site-header {
+        padding-top: 30px;
+        width: 80%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+
+        @media(max-width: 768px) {
+            display: block;
+        }
+
+        .header-content {
+            h2 {
+                font-size: 45px;
+                font-weight: 500;
+                margin-bottom: 20px;
+                color: #fff;
+            }
+
+            p {
+                font-size: 1rem;
+                margin-bottom: 30px;
+                color: #fff;
+            }
+
+            .cta {
+                display: flex;
+                justify-content: flex-start;
+
+                .btn {
+                    min-width: 160px;
+                    font-size: 12px;
+                    font-weight: 600;
+                    letter-spacing: 1px;
+                    padding: 15px 20px;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: #fff;
+                    border-radius: 100px;
+                    background: #21d397;
+                    margin-right: 25px;
+                }
+            }
+        }
+
+    }
+}
